--- a/files/game/styles.css
+++ b/files/game/styles.css
@@ -112,7 +112,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:301px;
+  width:752px;
   height:48px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -127,7 +127,7 @@
   position:absolute;
   left:503px;
   top:46px;
-  width:301px;
+  width:752px;
   height:48px;
 }
 #u425_text {
@@ -135,8 +135,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:301px;
-  white-space:nowrap;
+  width:752px;
+  word-wrap:break-word;
 }
 #u426 {
   border-width:0px;
